--- a/Client/GCMApp/AndroidManifest.xml
+++ b/Client/GCMApp/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.INTERNET" />
+     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="false"
